@@ -1,4 +1,4 @@
-apply plugin: 'groovy'
+import org.gradle.testing.SmokeTest
 
 useTestFixtures()
 
@@ -19,21 +19,9 @@ dependencies {
     smokeTestCompile libraries.spock
 }
 
-tasks.create('smokeTest', Test) { Test task ->
-    dependsOn ':intTestImage' // for the Gradle user dir/Gradle Home dir
-    mustRunAfter 'test'
-
+tasks.create('smokeTest', SmokeTest) { SmokeTest task ->
     testClassesDir = sourceSets.smokeTest.output.classesDir
     classpath = sourceSets.smokeTest.runtimeClasspath
-    jvmArgs '-Xmx512m', '-XX:+HeapDumpOnOutOfMemoryError'
-    if(!javaVersion.java8Compatible) {
-        jvmArgs '-XX:MaxPermSize=768m'
-    }
-
-    reports.junitXml.destination = file("${project.testResultsDir}/$name")
-    reports.html.destination = file("${project.reporting.baseDir}/$name")
-    systemProperties['smokeTest.gradleHomeDir'] = rootProject.intTestImage.destinationDir.absolutePath
-    systemProperties['smokeTest.gradleUserHomeDir'] = rootProject.file('intTestHomeDir').absolutePath
 }
 
 plugins.withType(org.gradle.plugins.ide.idea.IdeaPlugin) { // lazy as plugin not applied yet
